Add CSS to the file

--- a/repos/odin-recipes/recipes/galaktoboureko.html
+++ b/repos/odin-recipes/recipes/galaktoboureko.html
@@ -3,9 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>Greek Dessert</title>
+    <style>
+        body {
+            background-color:beige;
+        }
+        h1 {
+            color:rgb(125, 64, 21);
+            padding-bottom: 10px;
+            border-bottom: 2px solid ;
+        }
+        h2 {
+            color:rgb(139, 71, 23);
+            padding-bottom: 10px;
+            border-bottom: 2px solid;
+        }
+        a {
+            text-decoration: none;
+            color:rgb(188, 92, 23);
+            text-transform: uppercase;
+        }
+    </style>
     </head>
 
     <body>
+        <a href="../index.html">Back to Odin Recipes</a>
         <h1><strong>Galaktoboureko</strong></h1>
         <img src="https://as1.ftcdn.net/jpg/12/43/58/46/1000_F_1243584654_T7Qxva8C2bItnEITxn8wYLkvOVcuOEg2.jpg" alt="Galaktoboureko" height="310" width="400">
         <h2><em>Description</em></h2>
@@ -63,7 +84,7 @@
             <li><strong>Enjoy!</strong></li>     
         </ol>
         </p>
-        <a href="../index.html">Home</a>
+        
     </body>
 
 </html>
