Improve CSS style

--- a/repos/odin-recipes/recipes/galaktoboureko.html
+++ b/repos/odin-recipes/recipes/galaktoboureko.html
@@ -5,7 +5,7 @@
         <title>Greek Dessert</title>
     <style>
         body {
-            background-color:beige;
+            background-color:bisque;
         }
         h1 {
             color:rgb(125, 64, 21);
