--- a/repos/odin-recipes/recipes/spanakopita.html
+++ b/repos/odin-recipes/recipes/spanakopita.html
@@ -5,7 +5,7 @@
         <title>Greek Main Dishes</title>
     <style>
          body {
-            background-color:beige;
+            background-color:bisque;
         }
         h1 {
             color:rgb(125, 64, 21);
